Update .version and ChangeLog.
git-svn-id: http://svn.asterisk.org/svn/asterisk/tags/1.2.35@215946 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-09-03  Leif Madsen <lmadsen@digium.com>
+
+	* Asterisk 1.2.35 released
+
 2009-06-05  Tilghman Lesher <tlesher@digium.com>
 
 	* Asterisk 1.2.34 released
