Turn on DENOISE filter for all conference participants. (Fixes SWP-238)
git-svn-id: http://svn.asterisk.org/svn/asterisk/trunk@225048 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/CHANGES
+++ b/CHANGES
@@ -78,6 +78,9 @@ Applications
    to spy on.
  * The ChanSpy application also now has the 'E' option, which spies on a single
    channel and exits when that channel hangs up.
+ * The MeetMe application now turns on the DENOISE() function by default, for
+   each participant.  In our tests, this has significantly decreased background
+   noise (especially noisy data centers).
 
 Dialplan Functions
 ------------------
