Update .version and ChangeLog
git-svn-id: http://svn.asterisk.org/svn/asterisk/tags/1.6.1.8@225911 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-10-26  Leif Madsen <lmadsen@digium.com>
+
+	* Asterisk 1.6.1.8 released
+
+	* AST-2009-007
+
 2009-09-03  Leif Madsen <lmadsen@digium.com>
 
 	* Asterisk 1.6.1.6 released
