--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-11-04  Leif Madsen <lmadsen@digium.com>
+
+	* Release Asterisk 1.4.26.3
+
+	* AST-2009-008 and AST-2009-009
+
 2009-09-03  Leif Madsen <lmadsen@digium.com>
 
 	* Release Asterisk 1.4.26.2
