--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-11-04  Leif Madsen <lmadsen@digium.com>
+
+	* Asterisk 1.6.0.17 released
+
+	* AST-2009-008 and AST-2009-009
+
 2009-09-03  Leif Madsen <lmadsen@digium.com>
 
 	* Asterisk 1.6.0.15 released
