--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-11-04  Leif Madsen <lmadsen@digium.com>
+
+	* Asterisk 1.2.36 released
+
+	* AST-2009-008
+
 2009-09-03  Leif Madsen <lmadsen@digium.com>
 
 	* Asterisk 1.2.35 released
