--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-11-18  Leif Madsen <lmadsen@digium.com>
+
+	* Release Asterisk 1.4.27
+
 2009-11-13  Leif Madsen <lmadsen@digium.com>
 
 	* Release Asterisk 1.4.27-rc5
