Update .version and ChangeLog
git-svn-id: http://svn.asterisk.org/svn/asterisk/tags/1.6.0.18@230428 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-11-18  Leif Madsen <lmadsen@digium.com>
+
+	* Release Asterisk 1.6.0.18
+
 2009-11-13  Leif Madsen <lmadsen@digium.com>
 
 	* Release Asterisk 1.6.0.18-rc3
