--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-11-30  Leif Madsen <lmadsen@digium.com>
+
+	* Asterisk 1.2.37 released
+
+	* AST-2009-010
+
 2009-11-04  Leif Madsen <lmadsen@digium.com>
 
 	* Asterisk 1.2.36 released
