Update .version and ChangeLog files.
git-svn-id: http://svn.asterisk.org/svn/asterisk/tags/1.6.1.11@231481 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2009-11-30  Leif Madsen <lmadsen@digium.com>
+
+	* Release Asterisk 1.6.1.11
+
+	* AST-2009-010
+
+	* SDP parser regression fix
+
 2009-11-18  Leif Madsen <lmadsen@digium.com>
 
 	* Release Asterisk 1.6.1.10
