--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,7 @@
 
 	* AST-2009-010
 
-	* SDP parser regression fix (issue #16268)
+	* SDP parser regression fix (issue #16268, issue #16238)
 
 2009-11-18  Leif Madsen <lmadsen@digium.com>
 
