--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-12-17  Leif Madsen <lmadsen@digium.com>
+
+	* Release Asterisk 1.6.2.0
+
 2009-12-09  Leif Madsen <lmadsen@digium.com>
 
 	* Release Asterisk 1.6.2.0-rc8
