--- a/CHANGES
+++ b/CHANGES
@@ -361,6 +361,8 @@ Security Events Framework
 
 Miscellaneous
 -------------
+ * Addition of the Unit Test Framework API for managing registration and execution
+   of unit tests with the purpose of verifying the operation of C functions.
  * SendText is now implemented in chan_gtalk and chan_jingle. It will simply send
    XMPP text messages to the remote JID.
  * Modules.conf has a new option - "require" - that marks a module as critical for 
