--- a/CHANGES
+++ b/CHANGES
@@ -72,6 +72,8 @@ MGCP Changes
 
 Applications
 ------------
+ * Added "ready" option to QUEUE_MEMBER counting to count free agents who's wrap-up
+   timeout has expired.
  * Added 'R' option to app_queue.  This option stops moh and indicates ringing
    to the caller when an Agent's phone is ringing.  This can be used to indicate
    to the caller that their call is about to be picked up, which is nice when
