--- a/CHANGES
+++ b/CHANGES
@@ -330,7 +330,7 @@ Channel Event Logging
 
 CDR
 ---
- * 'linkedid' and 'peeraccount' are new CDR fields available to CDR officianados.
+ * 'linkedid' and 'peeraccount' are new CDR fields available to CDR aficionados.
    linkedid is based on uniqueID, but spreads to other channels as transfers, dials,
    etc are performed. Thus the peices of CDR can be grouped into multilegged sets.
  * Multiple files and formats can now be specified in cdr_custom.conf.
