Add a missing part of the connected line work into trunk.
Part of the work done for connected line was to add an optional
argument to the 'f' option to allow for the connected party information
of the outgoing channel to be set to the argument provided. This was
overlooked during the merge of the work to trunk and is being added
back now. The CHANGES file has also been updated to note this change.



git-svn-id: http://svn.asterisk.org/svn/asterisk/trunk@237803 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/CHANGES
+++ b/CHANGES
@@ -127,6 +127,10 @@ Applications
  * Page has a new option 'A(x)' which will playback an announcement simultaneously
    to all paged phones (and optionally excluding the caller's one using the new
    option 'n') before the call is bridged.
+ * The 'f' option to Dial has been augmented to take an optional argument. If no
+   argument is provided, the 'f' option works as it always has. If an argument is
+   provided, then the connected party information of all outgoing channels created
+   during the Dial will be set to the argument passed to the 'f' option.
 
 Dialplan Functions
 ------------------
