Updated channel variable list of osplookup application.
git-svn-id: http://svn.asterisk.org/svn/asterisk/trunk@239625 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/doc/tex/channelvariables.tex
+++ b/doc/tex/channelvariables.tex
@@ -998,15 +998,48 @@ ${SPYGROUP}           * A ':' (colon) separated list of group names.
 
 \subsection{OSP}
 \begin{verbatim}
-${OSPINHANDLE}          OSP handle of in_bound call
-${OSPINTIMELIMIT}       Duration limit for in_bound call
-${OSPOUTHANDLE}         OSP handle of out_bound call
-${OSPTECH}              OSP technology
-${OSPDEST}              OSP destination
-${OSPCALLING}           OSP calling number
-${OSPOUTTOKEN}          OSP token to use for out_bound call
-${OSPOUTTIMELIMIT}      Duration limit for out_bound call
-${OSPRESULTS}           Number of remained destinations
+${OSPINHANDLE}          The inbound call OSP transaction handle.
+${OSPINTOKEN}           The inbound OSP token.
+${OSPINTIMELIMIT}       The inbound call duration limit in seconds.
+${OSPINPEERIP}          The last hop IP address.
+${OSPINNETWORKID}       The inbound source network ID.
+${OSPINNPRN}            The inbound routing number.
+${OSPINNPCIC}           The inbound carrier identification code.
+${OSPINNPDI}            The inbound number portability database dip indicator.
+${OSPINSPID}            The inbound service provider identity.
+${OSPINOCN}             The inbound operator company number.
+${OSPINSPN}             The inbound service provider name.
+${OSPINALTSPN}          The inbound alternate service provider name.
+${OSPINMCC}             The inbound mobile country code.
+${OSPINMNC}             The inbound mobile network code.
+${OSPINDIVUSER}         The inbound Diversion header user part.
+${OSPINDIVHOST}         The inbound Diversion header host part.
+${OSPINTOHOST}          The inbound To header host part.
+${OSPINCUSTOMINFOn}     The inbound custom information.
+                        Where n is the index beginning with 1 upto 8.
+${OSPOUTHANDLE}         The outbound call OSP transaction handle.
+${OSPOUTTOKEN}          The outbound OSP token.
+${OSPOUTTIMELIMIT}      The outbound call duration limit in seconds.
+${OSPOUTTECH}           The outbound channel technology.
+${OSPOUTCALLIDTYPES}    The outbound Call-ID types.
+${OSPOUTCALLID}         The outbound Call-ID. Only for H.323.
+${OSPDESTINATION}       The destination IP address.
+${OSPDESTREMAILS}       The number of remained destinations.
+${OSPOUTCALLING}        The outbound calling number.
+${OSPOUTCALLED}         The outbound called number.
+${OSPOUTNETWORKID}      The outbound destination network ID.
+${OSPOUTNPRN}           The outbound routing number.
+${OSPOUTNPCIC}          The outbound carrier identification code.
+${OSPOUTNPDI}           The outbound number portability database dip indicator.
+${OSPOUTSPID}           The outbound service provider identity.
+${OSPOUTOCN}            The outbound operator company number.
+${OSPOUTSPN}            The outbound service provider name.
+${OSPOUTALTSPN}         The outbound alternate service provider name.
+${OSPOUTMCC}            The outbound mobile country code.
+${OSPOUTMNC}            The outbound mobile network code.
+${OSPDIALSTR}           The outbound Dial command string.
+${OSPINAUDIOQOS}        The inbound call leg audio QoS string.
+${OSPOUTAUDIOQOS}       The outbound call leg audio QoS string.
 \end{verbatim}
 
 \subsection{Connected line digit manipulation}
