--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-01-14  Leif Madsen <lmadsen@digium.com>
+
+	* Release Asterisk 1.6.1.13
+
 2010-01-08  Leif Madsen <lmadsen@digium.com>
 
 	* Release Asterisk 1.6.1.13-rc1
