Update .version and ChangeLog. Remove summary files.
git-svn-id: http://svn.asterisk.org/svn/asterisk/tags/1.6.2.1@240128 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-01-14  Leif Madsen <lmadsen@digium.com>
+
+	* Release Asterisk 1.6.2.1
+
 2010-01-08  Leif Madsen <lmadsen@digium.com>
 
 	* Release Asterisk 1.6.2.1-rc1
