transmit_silence_during_record replaced by transmit_silence
In asterisk.conf, transmit_silence_during_record has been removed
in favor of using only the transmit_silence option.  The
transmit_silence_during_record option remains a valid option in
asterisk.conf, but has been removed from the sample config and
noted in CHANGES.  



git-svn-id: http://svn.asterisk.org/svn/asterisk/trunk@240971 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/CHANGES
+++ b/CHANGES
@@ -371,6 +371,10 @@ Security Events Framework
 
 Miscellaneous
 -------------
+ * The transmit_silence_during_record option in asterisk.conf.sample has been removed.
+   Now, in order to enable transmitting silence during record the transmit_silence
+   option should be used.  transmit_silence_during_record remains a valid option, but
+   defaults to the behavior of the transmit_silence option.
  * Addition of the Unit Test Framework API for managing registration and execution
    of unit tests with the purpose of verifying the operation of C functions.
  * SendText is now implemented in chan_gtalk and chan_jingle. It will simply send
