Create iterative method for querying SRV results, and use that for finding AGI servers.
(closes issue #14775)
 Reported by: _brent_
 Patches: 
       20091215__issue14775.diff.txt uploaded by tilghman (license 14)
       hagi-5.patch uploaded by brent (license 388)
 Tested by: _brent_
 Reviewboard: https://reviewboard.asterisk.org/r/378/


git-svn-id: http://svn.asterisk.org/svn/asterisk/trunk@241188 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/CHANGES
+++ b/CHANGES
@@ -1325,6 +1325,11 @@ AGI Changes
   * If app_stack is loaded, GOSUB is a native AGI command that may be used to
     invoke subroutines in the dialplan.  Note that calling EXEC with Gosub
     does not behave as expected; the native command needs to be used, instead.
+  * Added the ability to perform SRV lookups on fast AGI calls. To use this
+    feature, simply use hagi: instead of agi: as the protocol portion
+    of the URI parameter to the AGI function call in your dial plan. Also note
+    that specifying a port number in the AGI URI will disable SRV lookups,
+    even if you use the hagi: protocol.
 
 Logger changes
 --------------
