expand code based appreviation of AST_CONFIG_DIR to configuration directory
git-svn-id: http://svn.asterisk.org/svn/asterisk/trunk@243652 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/CHANGES
+++ b/CHANGES
@@ -390,7 +390,7 @@ Miscellaneous
    This allows #exec to be used in asterisk.conf.
  * jabber.conf supports a new option auth_policy that toggles auto user registration.
  * A new lockconfdir option has been added to asterisk.conf to protect the
-   AST_CONFIG_DIR during reloads.
+   configuration directory (/etc/asterisk by default) during reloads.
 
 ------------------------------------------------------------------------------
 --- Functionality changes from Asterisk 1.6.1 to Asterisk 1.6.2  -------------
