Properly respect GOSUB_RESULT as to what to do with the master channel.
Previously, we would parse GOSUB_RESULT, but not actually do anything with it.
Also, allow GOSUB_RETVAL to be inherited back across a peer/master channel.

(closes issue #16687)
 Reported by: bklang
 Patches: 
       app_dial-preserve-gosub_retval.patch uploaded by bklang (license 919)
       (with modifications)

(closes issue #16686)
 Reported by: bklang
 Patches: 
       app_dial-respect-gosub_result.patch uploaded by bklang (license 919)
       (with modifications)



git-svn-id: http://svn.asterisk.org/svn/asterisk/trunk@244393 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/CHANGES
+++ b/CHANGES
@@ -131,6 +131,8 @@ Applications
    argument is provided, the 'f' option works as it always has. If an argument is
    provided, then the connected party information of all outgoing channels created
    during the Dial will be set to the argument passed to the 'f' option.
+ * Dial now inherits the GOSUB_RETVAL from the peer, when the U() option runs a
+   Gosub on the peer.
 
 Dialplan Functions
 ------------------
