Add support for GROUP_MATCH_COUNT regex matching on category
Current support for regex matching was previously only available on the group.
Also, error reporting for regex failures has been added. In addition to this
feature enhancement a unit test has been written to check the regular expression
logic to ensure the count operation is working as expected.

(closes issue #16642)
Reported by: kobaz
Patches: 
      groupmatch2.patch uploaded by kobaz (license 834)

Review: https://reviewboard.asterisk.org/r/503/


git-svn-id: http://svn.asterisk.org/svn/asterisk/trunk@247295 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/CHANGES
+++ b/CHANGES
@@ -191,6 +191,7 @@ Dialplan Functions
  * HASH-associated variables now can be inherited across channel creation, by
    prefixing the name of the hash at assignment with the appropriate number of
    underscores, just like variables.
+ * GROUP_MATCH_COUNT has been improved to allow regex matching on category
 
 Dialplan Variables
 ------------------
