--- a/doc/tex/imapstorage.tex
+++ b/doc/tex/imapstorage.tex
@@ -152,6 +152,12 @@ IMAP folders at the same level of hierarchy as the INBOX.  These will be
 used as alternate folders for storing voicemail messages to mimic the
 behavior of the current (file-based) voicemail system.
 
+Please note that it is not recommended to store your voicemails in the top
+level folder where your users will keep their emails, especially if there
+are a large number of emails. A large number of emails in the same folder(s)
+that you're storing your voicemails could cause a large delay as Asterisk must
+parse through all the emails. For example a mailbox with 100 emails in it could
+take up to 60 seconds to receive a response.
 
 \subsection{Separate vs. Shared Email Accounts}
 
