Updated CHANGES file to mention res_fax and res_fax_spandsp.
Also fixed MODULEINFO depends and conflicts for app_fax, res_fax, and res_fax_spandsp.


git-svn-id: http://svn.asterisk.org/svn/asterisk/trunk@250302 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/CHANGES
+++ b/CHANGES
@@ -393,6 +393,13 @@ Security Events Framework
    coming soon.  For more information on the security events framework, see the
    "Security Events" chapter of the included documentation - doc/tex/asterisk.pdf.
 
+Fax
+---
+ * A technology independent fax frontend (res_fax) has been added to Asterisk.
+ * A spandsp based fax backend (res_fax_spandsp) has been added.
+ * The app_fax module has been deprecated in favor of the res_fax module and
+   the new res_fax_spandsp backend.
+
 Miscellaneous
 -------------
  * The transmit_silence_during_record option in asterisk.conf.sample has been removed.
