Add new config option to control AMI alarm event reporting in chan_dahdi.
New config parameter "reportalarms" added in chan_dahdi.conf which supports the
following possible values:
"channels": report each channel alarms (current behavior, default for backward compatibility)
"spans": report an "SpanAlarm" event when the span of any configured channel is alarmed
"all": report channel and span alarms (aggregated behavior)
"none": do not report any alarms

(closes issue #16709)
Reported by: nahuelgreco
Patches: 
      chan_dahdi.c.reportalarms.patch uploaded by nahuelgreco (license 162)



git-svn-id: http://svn.asterisk.org/svn/asterisk/trunk@250392 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/CHANGES
+++ b/CHANGES
@@ -421,6 +421,8 @@ Miscellaneous
    configuration directory (/etc/asterisk by default) during reloads.
  * The parkeddynamic option has been added to features.conf to enable the creation
    of dynamic parkinglots.
+ * chan_dahdi now supports reporting alarms over AMI either by channel or span via
+   the reportalarms config option.
 
 ------------------------------------------------------------------------------
 --- Functionality changes from Asterisk 1.6.1 to Asterisk 1.6.2  -------------
