Update ChangeLog and .version files.
git-svn-id: http://svn.asterisk.org/svn/asterisk/tags/1.6.1.18-rc2@250973 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-03-05  Leif Madsen <lmadsen@digium.com>
+
+	* Asterisk 1.6.1.18-rc2 released
+
 2010-03-04  Leif Madsen <lmadsen@digium.com>
 
 	* Asterisk 1.6.1.18-rc1 released
