--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-03-05  Leif Madsen <lmadsen@digium.com>
+
+	* Asterisk 1.6.2.6-rc2 released
+
 2010-03-04  Leif Madsen <lmadsen@digium.com>
 
 	* Asterisk 1.6.2.6-rc1 released
