PITCH_SHIFT dialplan function
The PITCH_SHIFT function can be used on a channel to independently
modify the pitch of both rx and tx audio streams.  Now you can
improve your conference calls by assigning a random pitch effect
to everyone entering a meetme room, or just make your day more
interesting by making your co-workers sound funny.  These are just
some of the numerious practical uses for this function. Enjoy!

https://reviewboard.asterisk.org/r/526/


git-svn-id: http://svn.asterisk.org/svn/asterisk/trunk@251038 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/CHANGES
+++ b/CHANGES
@@ -143,6 +143,8 @@ Applications
 
 Dialplan Functions
 ------------------
+ * PITCH_SHIFT dialplan function added. This function can be used to modify the
+   pitch of a channel's tx and rx audio streams.
  * Added new dialplan functions CONNECTEDLINE and REDIRECTING which permits
    setting various connected line and redirecting party information.
  * CALLERID and CONNECTEDLINE dialplan functions have been extended to
