Update .version and ChangeLog
git-svn-id: http://svn.asterisk.org/svn/asterisk/tags/1.6.0.26@251868 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-03-11  Leif Madsen <lmadsen@digium.com>
+
+	* Asterisk 1.6.0.26 released
+
 2010-03-04  Leif Madsen <lmadsen@digium.com>
 
 	* Asterisk 1.6.0.26-rc1 released 
