--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-03-11  Leif Madsen <lmadsen@digium.com>
+
+	* Asterisk 1.6.1.18 released
+
 2010-03-05  Leif Madsen <lmadsen@digium.com>
 
 	* Asterisk 1.6.1.18-rc2 released
