Update .version and ChangeLog
git-svn-id: http://svn.asterisk.org/svn/asterisk/tags/1.6.2.6@251870 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-03-11  Leif Madsen <lmadsen@digium.com>
+
+	* Asterisk 1.6.2.6 released
+
 2010-03-05  Leif Madsen <lmadsen@digium.com>
 
 	* Asterisk 1.6.2.6-rc2 released
