--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-04-13  Leif Madsen <lmadsen@digium.com>
+
+	* Asterisk 1.6.0.27-rc2 Released
+
 2010-04-05  Leif Madsen <lmadsen@digium.com>
 
 	* Asterisk 1.6.0.27-rc1 Released
