--- a/doc/tex/asterisk.tex
+++ b/doc/tex/asterisk.tex
@@ -32,7 +32,7 @@
 
 
 \author{Asterisk Development Team \\ Asterisk.org}
-\title{Asterisk Reference Information \\ SVN-trunk-r258265M}
+\title{Asterisk Reference Information \\ ASTERISKVERSION}
 
 \begin{document}
 \maketitle
